# Leakage-Detector

./: .gitignore  LICENSE  LeakProfiler.py  README.md  leakgaurd.py  leakguard.py  leakguard_synthetic_full.csv  pyproject.toml  requirements.txt  test-notebook.ipynb  test_notebook.ipynb
src/: LeakProfiler.py  test_advisory_engine.py
